build: `gradle jpackage` to create installer
win: To update UUID, `[Guid]::NewGuid()` on PowerShell.